# evtr

./: .gitignore  CODE_REVIEW.md  Cargo.toml  README.md  refactor.at
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  device.rs  devices.rs  error.rs  evtr.rs  main.rs  monitor.rs  selector.rs  ui.rs
src/config/: file.rs  keymap.rs  path.rs  types.rs  validate.rs
src/device/: monitor.rs  popup.rs  selector.rs  widgets.rs
src/device/monitor/: config.rs  controls.rs  layout.rs  math.rs  model.rs  plan.rs  render.rs  state.rs  theme.rs  touch.rs  ui.rs
src/device/monitor/layout/: axes.rs  boxes.rs
src/device/monitor/model/: bootstrap.rs  buckets.rs  types.rs
src/device/monitor/plan/: areas.rs  scroll.rs
src/device/monitor/render/: axis.rs  buttons.rs  frame.rs  hat.rs  joystick.rs  touch.rs
src/device/popup/: layout.rs  presets.rs
src/device/selector/: commands.rs  discovery.rs  state.rs  view.rs
src/monitor/: bootstrap.rs  config.rs  controls.rs  layout.rs  math.rs  model.rs  plan.rs  render.rs  startup.rs  state.rs  touch.rs  ui.rs  view_model.rs
src/monitor/layout/: axes.rs  boxes.rs
src/monitor/model/: buckets.rs  collect.rs  index.rs  types.rs
src/monitor/plan/: areas.rs  scroll.rs
src/monitor/render/: axis.rs  buttons.rs  frame.rs  geometry.rs  hat.rs  joystick.rs  touch.rs
src/monitor/state/: popup.rs  scroll.rs
src/monitor/touch/: bootstrap.rs  types.rs  update.rs
src/selector/: commands.rs  devices.rs  discovery.rs  state.rs  view.rs
src/selector/discovery/: issue.rs
src/selector/state/: filter.rs
src/ui/: popup.rs  text.rs  theme.rs  widgets.rs
src/ui/popup/: layout.rs  presets.rs
(+17 files in other folders)
