[package]
name = "evtr"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev = { version = "0.13", features = ["tokio"] }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
fuzzy-matcher = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt"] }
futures = "0.3"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
