[package]
name = "evtr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A terminal UI for inspecting Linux evdev input devices"
license = "MIT"
readme = "README.md"
keywords = ["evdev", "linux", "input", "tui", "terminal"]
categories = ["command-line-utilities", "hardware-support"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
evdev = { version = "0.13", features = ["tokio"] }
futures = "0.3"
fuzzy-matcher = "0.3"
ratatui = { version = "0.30", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt"] }
toml = "0.9"
unicode-width = "0.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
